--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "talain",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "private": true,
   "scripts": {
     "start": "npm run webpack",
     "webpack": "webpack -d --watch"
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/AlyChloe/talain#readme",
   "dependencies": {
+    "handlebars": "^4.0.11",
     "webpack": "4.12.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   }
 }
