--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   "homepage": "https://github.com/AlyChloe/talain#readme",
   "dependencies": {
     "handlebars": "^4.0.11",
-    "webpack": "4.12.0"
+    "handlebars-loader": "^1.7.0",
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   }
